[package]
name = "superdevs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
bs58 = "0.5"
base64 = "0.21"
bincode = "1.3"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base58 = "0.2.0"
